src/test/deca/syntax/valid/resultats/test_all_token_for_helloword-synt.res
`> [14, 0] Program
   +> ListDeclClass [List with 0 elements]
   `> [14, 0] Main
      +> ListDeclVar [List with 0 elements]
      `> ListInst [List with 5 elements]
         []> [15, 0] Print
         ||  `> [15, 6] ListExpr [List with 2 elements]
         ||     []> [15, 6] StringLiteral (print() \\ )
         ||     []> [15, 20] StringLiteral (123456879\")
         []> [15, 35] NoOperation
         []> [16, 0] Print
         ||  `> [16, 7] ListExpr [List with 1 elements]
         ||     []> [16, 7] StringLiteral ()
         []> [21, 0] Println
         ||  `> [21, 9] ListExpr [List with 1 elements]
         ||     []> [21, 9] StringLiteral (,(){}' ; )
         []> [23, 0] Println
             `> [23, 8] ListExpr [List with 1 elements]
                []> [23, 8] StringLiteral (test println )
