src/test/deca/syntax/invalid/resultats/test5_print-lex.res
'{': [@0,288:288='{',<36>,14:0]
'print': [@1,291:295='print',<17>,15:1]
'(': [@2,296:296='(',<34>,15:6]
STRING: [@3,297:303='"Hello"',<47>,15:7]
')': [@4,304:304=')',<35>,15:14]
'}': [@5,320:320='}',<37>,16:0]
